syntax = "proto3";

package io.evitadb.externalApi.grpc.generated;
option java_multiple_files = true;
option csharp_namespace = "EvitaDB";

import "GrpcAttributeSchemaMutations.proto";
import "GrpcCatalogSchemaMutations.proto";

message GrpcLocalCatalogSchemaMutation {
  oneof mutation {
    GrpcModifyCatalogSchemaDescriptionMutation modifyCatalogSchemaDescriptionMutation = 1;

    GrpcCreateGlobalAttributeSchemaMutation createGlobalAttributeSchemaMutation = 2;
    GrpcModifyAttributeSchemaDefaultValueMutation modifyAttributeSchemaDefaultValueMutation = 3;
    GrpcModifyAttributeSchemaDeprecationNoticeMutation modifyAttributeSchemaDeprecationNoticeMutation = 4;
    GrpcModifyAttributeSchemaDescriptionMutation modifyAttributeSchemaDescriptionMutation = 5;
    GrpcModifyAttributeSchemaNameMutation modifyAttributeSchemaNameMutation = 6;
    GrpcModifyAttributeSchemaTypeMutation modifyAttributeSchemaTypeMutation = 7;
    GrpcRemoveAttributeSchemaMutation removeAttributeSchemaMutation = 8;
    GrpcSetAttributeSchemaFilterableMutation setAttributeSchemaFilterableMutation = 9;
    GrpcSetAttributeSchemaGloballyUniqueMutation setAttributeSchemaGloballyUniqueMutation = 10;
    GrpcSetAttributeSchemaLocalizedMutation setAttributeSchemaLocalizedMutation = 11;
    GrpcSetAttributeSchemaNullableMutation setAttributeSchemaNullableMutation = 12;
    GrpcSetAttributeSchemaSortableMutation setAttributeSchemaSortableMutation = 13;
    GrpcSetAttributeSchemaUniqueMutation setAttributeSchemaUniqueMutation = 14;

    GrpcCreateEntitySchemaMutation createEntitySchemaMutation = 15;
    GrpcModifyEntitySchemaMutation modifyEntitySchemaMutation = 16;
    GrpcModifyEntitySchemaNameMutation modifyEntitySchemaNameMutation = 17;
    GrpcRemoveEntitySchemaMutation removeEntitySchemaMutation = 18;
  }
}

message GrpcTopLevelCatalogSchemaMutation {
  oneof mutation {
    GrpcCreateCatalogSchemaMutation createCatalogSchemaMutation = 1;
    GrpcModifyCatalogSchemaNameMutation modifyCatalogSchemaNameMutation = 2;
    GrpcRemoveCatalogSchemaMutation removeCatalogSchemaMutation = 3;
  }
}